codegen/tests/ui/route-bad-method.stderr
error: 'FIX' is not a valid method
 --> $DIR/route-bad-method.rs:6:9
  |
6 | #[route(FIX, "/hello")]
  |         ^^^
  |
  = help: valid methods are: `GET`, `PUT`, `POST`, `DELETE`, `PATCH`

error: expected a valid HTTP method identifier
 --> $DIR/route-bad-method.rs:9:9
  |
9 | #[route("hi", "/hello")]
  |         ^^^^
  |
  = help: valid methods are: `GET`, `PUT`, `POST`, `DELETE`, `PATCH`

error: expected a valid HTTP method identifier
  --> $DIR/route-bad-method.rs:12:9
   |
12 | #[route("GET", "/hello")]
   |         ^^^^^
   |
   = help: valid methods are: `GET`, `PUT`, `POST`, `DELETE`, `PATCH`

error: expected a valid HTTP method identifier
  --> $DIR/route-bad-method.rs:15:9
   |
15 | #[route(120, "/hello")]
   |         ^^^
   |
   = help: valid methods are: `GET`, `PUT`, `POST`, `DELETE`, `PATCH`

error: 'CONNECT' is not a valid method
  --> $DIR/route-bad-method.rs:18:9
   |
18 | #[route(CONNECT, "/hello")]
   |         ^^^^^^^
   |
   = help: valid methods are: `GET`, `PUT`, `POST`, `DELETE`, `PATCH`

error: aborting due to 5 previous errors

